<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1E9E9"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/enter_hobbies"
        style="@style/general_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hobby_hint_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/done_button"
        style="@style/general_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addHobbies"
        android:text="@string/done" />

    <TextView
        android:id="@+id/hobbies_text"
        style="@style/general_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/general_style"
            android:fontFamily="sans-serif-black"
            android:text="@string/my_bio"
            android:textColor="#423C3C"
            android:textSize="20sp" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>